--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " style="background-color: #181818" color-on-scroll="400">
           <div class="container">
-            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip"><img src="images/IMG_3568.jpeg" style="height:40px;width: 50px "></a>
+            <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip"><img src="images/vad1.png" style="height:40px;width: 50px "></a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -50,7 +50,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/w.jp')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/w.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/IMG_3568.jpeg" alt="Image"/></a></div>
           <div class="h3 title">Hello! I'm Victor Aremu David.  <a href="" style="color: white" class="typerite" data-period="2000" data-type='[ "Welcome", "I am Victor Aremu David","p.k.a (VAD)"  ]'></a></div>
           <p class="categor" style="color:gray"> I'm a professional task solving <b style="color:white">Software Engineer</b> from Nigeria. I deliver quality and amazing Web solutions, with high and proficient skills required.</p><a class="btn smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Hire Me</a>
         </div>
