--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <!-- <figure class="cc-effect"><img src="images/v.jpeg" style="height:18pc;width:100%" alt="Image"/> -->
+                  <!-- <figure class="cc-effect"><img src="images/IMG_3568.jpeg" style="height:18pc;width:100%" alt="Image"/> -->
                    <!--  <figcaption>
                       <div class="h4">My Picture</div>
                       <p>VAD</p>
