--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   
-<meta name="description" content="Place the meta description text here.">
+    <meta name="description" content="Victor Aremu David">
+    <meta name="keywords" content="VAD">
+    <meta name="author" content="Victor Aremu David">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>VAD</title>
-    <meta name="description" content="VAD"/>
-   <!--  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"> -->
+    
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"> 
    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"> 
       <link href="css/set.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
