--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"> 
       <link href="css/set.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles/mainn.css" rel="stylesheet">
+    <link href="styles/main.css" rel="stylesheet">
   </head>
   <body id="top" style="background-color:#121212">
     <header>
