--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Victor Aremu David">
-    <meta name="keywords" content="VAD">
-    <meta name="author" content="Victor Aremu David">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 
     <title>VAD</title>
     
@@ -14,7 +9,7 @@
    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"> 
       <link href="css/set.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="styles/mainn.css" rel="stylesheet">
   </head>
   <body id="top" style="background-color:#121212">
     <header>
