--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Victor Aremu David">
+    <meta name="keywords" content="VAD">
+   <meta name="author" content="Victor Aremu David">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>VAD</title>
     
