--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/v2.jpg" style="height:30pc;width:34pc" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/v.jpg" style="height:30pc;width:pc" alt="Image"/>
                     <figcaption>
                       <div class="h4">Portfolio</div>
                       <p>VAD</p>
