--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Victor Aremu David">
-    <meta name="keywords" content="VAD">
-   <meta name="author" content="Victor Aremu David">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>VAD</title>
-    
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"> 
+    <meta name="description" content="VAD"/>
+   <!--  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet"> -->
    <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css"> 
       <link href="css/set.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -359,7 +355,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><img src="images/IMG_358.jpeg" style="height:20pc;width:100%" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/IMG_3568.jpeg" style="height:20pc;width:100%" alt="Image"/>
                     <figcaption>
                       <div class="h4">My Picture</div>
                       <p>VAD</p>
@@ -397,7 +393,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><img src="images/v.jpg" style="height:30pc;width:pc" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/v2.jpg" style="height:30pc;width:34pc" alt="Image"/>
                     <figcaption>
                       <div class="h4">Portfolio</div>
                       <p>VAD</p>
