--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
               
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://speedyfame.com/ ">
                   <figure class="cc-effect"><img src="images/e.png"  style="height:15pc;width:100%;" alt="Image"/>
                     <figcaption>
                       <div class="h4">Recent Project</div>
-                      <p>Digital Management System For Secondary Schools</p>
-                        <p>Coming soon!!!</p>
+                      <p>Speedy fame </p>
+                        <p>Launched!!!</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
@@ -343,7 +343,7 @@
                     <figcaption>
                       <div class="h4">Recent Project</div>
                       <p> Digital Management System For Churches</p>
-                      <p>Coming Soon!!!</p>
+                      <p>coming soon!!!</p>
                       
                     </figcaption>
                   </figure></a></div>
