--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
                         <p>Launched!!!</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
-                  <figure class="cc-effect"><img src="images/screen.png" style="height:15pc;width:100%;" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://the-mightgains.com/ ">
+                  <figure class="cc-effect"><img src="https://the-mightgains.com/assets/uploads/user5b384ce32d8cdef02bc3a139d4cac0a22bb029e8/d5287dd3e347daaf30a0e3951aca0b07.png " style="height:15pc;width:100%;" alt="Image"/>
                     <figcaption>
                       <div class="h4">Recent Project</div>
                       <p> Digital Management System For Churches</p>
