--- a/index.html
+++ b/index.html
@@ -433,6 +433,37 @@
 <div class="section" id="experience" style="background:#000000">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title" style="color:white">Work Experience</div>
+<div class="card" style="background:#40404040">
+      <div class="row">
+        <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>April 2022 - Present
+              Georgia, USA</p>
+            <div class="h5" TeckLink 
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5" style="color:white"> Software Developer
+                Intern
+             </div>
+            <p class="" style="color:grey">
+              » Planned website development, converting mockups into usable web
+              presence with Html,JavaScript,JAX and JSON Coding.
+            </p>
+            
+            <p class="" style="color:grey">
+              » Employed coding practices based on commonly accepted standards to
+              establish site layout and user interface
+
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
      <div class="card" style="background:#40404040">
       <div class="row">
         <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
