--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://the-mightgains.com/ ">
-                  <figure class="cc-effect"><img src="https://the-mightgains.com/assets/uploads/user5b384ce32d8cdef02bc3a139d4cac0a22bb029e8/d5287dd3e347daaf30a0e3951aca0b07.png " style="height:10pc;width:100%;" alt="Image"/>
+                  <figure class="cc-effect"><img src="https://the-mightgains.com/public/images/303ed4c69846ab36c2904d3ba8573050.png " style="height:10pc;width:100%;" alt="Image"/>
                     <figcaption>
                       <div class="h4">Recent Project</div>
                       <p> The Might gains (Social service platform)</p>
@@ -439,7 +439,7 @@
           <div class="card-body cc-experience-header">
             <p>April 2022 - Present
               Georgia, USA</p>
-            <div class="h5" TeckLink 
+            <div class="h5"> TeckLink 
             </div>
           </div>
         </div>
