New update added

--- a/index.html
+++ b/index.html
@@ -458,6 +458,9 @@
               establish site layout and user interface
 
             </p>
+<p class="" style="color:grey">
+              » Orchestrated efficient large-scale software deployments, including
+              testing features and correcting code.</p>
           </div>
         </div>
       </div>
