--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://bsf-fuoye.netlify.app/">
-                  <figure class="cc-effect"><img src="images/images.jpg"  style="height:15pc;width:100%;border-radius:" alt="Image"/>
+                  <figure class="cc-effect"><img src="https://bsf-fuoye.netlify.app/images/images.jpg"  style="height:15pc;width:100%;border-radius:" alt="Image"/>
                     <figcaption>
                       <div class="h4">Recent Project</div>
                       <p>Creative Website Design & Development</p>
@@ -438,7 +438,7 @@
         <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>April 2022 - Present
-              Georgia, USA</p>
+              Tbilisi, Georgia</p>
             <div class="h5"> TeckLink 
             </div>
           </div>
