--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
-                <li class="nav-item"><a class="btn btn-sm smooth-scroll mr-2" href="images/Victor David's Resume_.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Download Resume</a></li>
+                <li class="nav-item"><a class="btn btn-sm smooth-scroll mr-2" href="images/Victor_David_Resume_.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Download Resume</a></li>
               </ul>
             </div>
           </div>
