--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/IMG_3568.jpeg" alt="Image"/></a></div>
           <div class="h3 title">Hello! I'm Victor Aremu David.  <a href="" style="color: white" class="typerite" data-period="2000" data-type='[ "Welcome", "I am Victor Aremu David","p.k.a (VAD)"  ]'></a></div>
-          <p class="categor" style="color:gray"> I'm a professional task solving <b style="color:white">Software Engineer</b> from Nigeria. I deliver quality and amazing Web solutions, with high and proficient skills required.</p><a class="btn smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Hire Me</a>
+          <p class="categor" style="color:gray"> I'm a professional task solving <b style="color:white">Software Developer</b> from Nigeria. I deliver quality and amazing Web solutions, with high and proficient skills required.</p><a class="btn smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Hire Me</a>
         </div>
       </div>
       <div class="section">
@@ -81,7 +81,7 @@
             <p></p>
                      <div class="h4 mb-0 title" style="color:white">Victor Aremu David (VAD)</div> 
 
-                              <div class="h6  mt-3 title" style="color:grey"> Software Engineer from Nigeria.</div>
+                              <div class="h6  mt-3 title" style="color:grey"> Software Developer from Nigeria.</div>
                               <p style="color:gray">I'm a professional task solving Software Engineer from Nigeria. I deliver quality and amazing solutions, with high and proficient skills required.</p>
 
 
