--- a/index.html
+++ b/index.html
@@ -413,14 +413,14 @@
     </div>
     </div>
      <div class="tab-content gallery mt-5 ">
-      <div class="tab-pane active" id="web-development">
+      <div class="tab-pane active" id="graphic-design">
         
            <div class="ml-auto mr-auto">
           <div class="r row">
            
             <div class="col-md-6">
             <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://topsocialmarket.com/">
-                  <figure class="cc-effect"><img src="https://topsocialmarket.com/public/images/b9228e0962a78b84f3d5d92f4faa000b.png" style="height:15pc;width:100%;" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/vad1.png" style="height:15pc;width:100%;" alt="Image"/>
                     <figcaption>
                       <div class="h4">Victor David</div>
                       <p> Top Social </p>
