--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
-                <li class="nav-item"><a class="btn btn-sm smooth-scroll mr-2" href="images/Victor_David_Resume_.pdf" download data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Download Resume</a></li>
+               
               </ul>
             </div>
           </div>
@@ -47,22 +47,22 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/w.jp')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/k.jpg')"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/IMG_3568.jpeg" alt="Image"/></a></div>
           <div class="h3 title">Hello! I'm Victor Aremu David.  <a href="" style="color: white" class="typerite" data-period="2000" data-type='[ "Welcome", "I am Victor Aremu David","p.k.a (VAD)"  ]'></a></div>
-          <p class="categor" style="color:gray"> I'm a professional task solving <b style="color:white">Software Developer</b> from Nigeria. I deliver quality and amazing Web solutions, with high and proficient skills required.</p><a class="btn smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#673AB7;color:white">Hire Me</a>
+          <p class="categor" style="color:gray"> I'm a professional task solving <b style="color:white">Software Developer</b> from Nigeria. I deliver quality and amazing Web solutions, with high and proficient skills required.</p><a class="btn smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#2951C4;color:white">Hire Me</a><a class="btn btn-primary" style="background-color:#2951C4;color:white" href="images/Victor_David_Resume_.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
         <div class="container">
           <div class="button-container" >
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/profile.php?id=100035539115115" rel="tooltip" title="Follow me on Facebook" style="background-color: #673AB7"><i class="fa fa-facebook"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="http://twitter.com/VAD_INC01" rel="tooltip" title="Follow me on Twitter" style="background-color: #673AB7"><i class="fa fa-twitter" ></i></a>
-              <a class="btn btn-default btn-round btn-lg btn-icon" href="https://wa.me/+2349072045997" rel="tooltip" title="Follow me on Whatsapp" style="background-color: #673AB7"><i class="fa fa-whatsapp"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/profile.php?id=100035539115115" rel="tooltip" title="Follow me on Facebook" style="background-color:#2951C4"><i class="fa fa-facebook"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="http://twitter.com/VAD_INC01" rel="tooltip" title="Follow me on Twitter" style="background-color:#2951C4"><i class="fa fa-twitter" ></i></a>
+              <a class="btn btn-default btn-round btn-lg btn-icon" href="https://wa.me/+2349072045997" rel="tooltip" title="Follow me on Whatsapp" style="background-color:#2951C4"><i class="fa fa-whatsapp"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href=" https://github.com/viccy2/ " rel="tooltip" title="Follow me on Githu" style="background-color:#673AB7"><i class="fa fa-github"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/vaad" rel="tooltip" title="Follow me on LinkedIn" style="background-color: #673AB7"><i class="fa fa-linkedin"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/vaad" rel="tooltip" title="Follow me on LinkedIn" style="background-color:#2951C4"><i class="fa fa-linkedin"></i></a>
           
           </div>
         </div>
@@ -73,7 +73,7 @@
 <div class="section" id="about" style="background:#000000">
        <div class="h4 mt-10 title" style="text-align:center;color:white;margin-top:50px;">About</div>
   <div class="container">
-    <div class="card" data-aos="fade-up" data-aos-offset="10" style="background:#40404040">
+    <div class="card" data-aos="zoom-in" data-aos-offset="10" data-aos-duration="500" style="background:#40404040">
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
@@ -126,7 +126,7 @@
 <div class="section" id="skill" style="background:#000000">
   <div class="container">
     <div class="h4 text-center mb-4 title" style="color:white">Professional Skills</div>
-    <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom" style="background:#40404040">
+    <div class="card" data-aos="zoom-in" data-aos-offset="10" data-aos-duration="500" data-aos-anchor-placement="top-bottom" style="background:#40404040">
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
@@ -617,7 +617,7 @@
           <div class="carousel-item active">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-1.jpg" alt="Image"/>
-                <div class="h5 pt-2" style="color: #673AB7">Dr. Adeyemi Aderinto</div>
+                <div class="h5 pt-2" style="color:#2951C4">Dr. Adeyemi Aderinto</div>
                 <p class="category">CEO / SQI</p>
               </div>
               <div class="col-lg-10 col-md-9 text-white">
@@ -628,7 +628,7 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-2.jpg" alt="Image"/>
-                <div class="h5 pt-2" style="color: #673AB7">Prodigy</div>
+                <div class="h5 pt-2" style="color:#2951C4">Prodigy</div>
                 <p class="category">Software Engineer / Developer</p>
               </div>
               <div class="col-lg-10 col-md-9 text-white">
@@ -639,7 +639,7 @@
           <div class="carousel-item">
             <div class="row">
               <div class="col-lg-2 col-md-3 cc-reference-header"><img src="images/reference-image-3.jpg" alt="Image"/>
-                <div class="h5 pt-2" style="color: #673AB7">Alexander</div>
+                <div class="h5 pt-2" style="color:#2951C4">Alexander</div>
                 <p class="category">CEO / Webnote</p>
               </div>
               <div class="col-lg-10 col-md-9">
