--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body id="top" style="background-color:#121212">
     <header>
       <div class="profile-page sidebar-collapse">
-        <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " style="background-color: #181818" color-on-scroll="400">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " style="background-color:#2951C4" color-on-scroll="400">
           <div class="container">
             <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip"><img src="images/vad1.png" style="height:40px;width: 50px "></a>
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
@@ -61,7 +61,7 @@
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/profile.php?id=100035539115115" rel="tooltip" title="Follow me on Facebook" style="background-color:#2951C4"><i class="fa fa-facebook"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="http://twitter.com/VAD_INC01" rel="tooltip" title="Follow me on Twitter" style="background-color:#2951C4"><i class="fa fa-twitter" ></i></a>
               <a class="btn btn-default btn-round btn-lg btn-icon" href="https://wa.me/+2349072045997" rel="tooltip" title="Follow me on Whatsapp" style="background-color:#2951C4"><i class="fa fa-whatsapp"></i></a>
-            <a class="btn btn-default btn-round btn-lg btn-icon" href=" https://github.com/viccy2/ " rel="tooltip" title="Follow me on Githu" style="background-color:#673AB7"><i class="fa fa-github"></i></a>
+            <a class="btn btn-default btn-round btn-lg btn-icon" href=" https://github.com/viccy2/ " rel="tooltip" title="Follow me on Githu" style="background-color:#2951C4"><i class="fa fa-github"></i></a>
             <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/vaad" rel="tooltip" title="Follow me on LinkedIn" style="background-color:#2951C4"><i class="fa fa-linkedin"></i></a>
           
           </div>
