--- a/index.html
+++ b/index.html
@@ -667,21 +667,21 @@
                       <div class="p pb-3"><strong style="color:grey">Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
-                          <div class="input-group"><span class="input-group-addon" style="color:#673AB7"><i class="fa fa-user-circle"></i></span>
+                          <div class="input-group"><span class="input-group-addon" style="color:#2951C4"><i class="fa fa-user-circle"></i></span>
                             <input class="form-control" type="text" name="name" placeholder="Name" required="required" />
                           </div>
                         </div>
                       </div>
                       <div class="row mb-3">
                         <div class="col">
-                          <div class="input-group"><span class="input-group-addon" style="color:#673AB7"><i class="fa fa-file-text"></i></span>
+                          <div class="input-group"><span class="input-group-addon" style="color:#2951C4"><i class="fa fa-file-text"></i></span>
                             <input class="form-control" type="text" name="Subject" placeholder="Subject" required="required"/>
                           </div>
                         </div>
                       </div>
                       <div class="row mb-3">
                         <div class="col">
-                          <div class="input-group"><span class="input-group-addon" style="color:#673AB7"><i class="fa fa-envelope"></i></span>
+                          <div class="input-group"><span class="input-group-addon" style="color:#2951C4"><i class="fa fa-envelope"></i></span>
                             <input class="form-control" type="email" name="_replyto" placeholder="E-mail" required="required"/>
                           </div>
                         </div>
@@ -695,7 +695,7 @@
                       </div>
                       <div class="row">
                         <div class="col">
-                          <button class="btn" type="submit" style="background-color:#673AB7;color:white">Send</button>
+                          <button class="btn" type="submit" style="background-color:#2951C4;color:white">Send</button>
                         </div>
                       </div>
                     </form>
