--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/k.jpg')"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/z.jpg')"></div>
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/IMG_3568.jpeg" alt="Image"/></a></div>
