--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/z.jpg')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/z.jpg" alt="Image"/></a></div>
           <div class="h3 title">Hello! I'm Victor Aremu David.  <a href="" style="color: white" class="typerite" data-period="2000" data-type='[ "Welcome", "I am Victor Aremu David","p.k.a (VAD)"  ]'></a></div>
           <p class="categor" style="color:gray"> I'm a professional task solving <b style="color:white">Software Developer</b> from Nigeria. I deliver quality and amazing Web solutions, with high and proficient skills required.</p><a class="btn smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="background-color:#2951C4;color:white">Hire Me</a><a class="btn btn-primary" style="background-color:#2951C4;color:white" href="images/Victor_David_Resume_.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
