--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       <div class="row">
         <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Apr 2019 - Feb 2021
+            <p>Apr 2019 - Feb 2022
             Ekiti, Nigeria</p>
             <div class="h5">DSC</div>
           </div>
@@ -488,6 +488,7 @@
               testing features and correcting code.</p>
               <p class="" style="color:grey">» Trained and managed team of developers and discussed issuesin order
               to provide resolution and apply best practices</p>
+
           </div>
         </div>
       </div>
@@ -507,19 +508,20 @@
             <div class="h5" style="color:white">Full Stack Web Developer
                 Intern
              </div>
+            
             <p class="" style="color:grey">
-              » Planned website development, converting mockups into usable web
-              presence with Html,JavaScript,JAX and JSON Coding.
-            </p>
-            <p class="" style="color:grey">
-             »Built some great projects like Banking Applications, PWA Chat
-              Applications, Management System for Schools and Churches using Web
-              technologieslike Php, AJAX, MySQL
-            </p>
-            <p class="" style="color:grey">
-              » Employed coding practices based on commonly accepted standards to
-              establish site layout and user interface
+              
+» Coded software updates and alterations based on detailed design specifications.
 
+» Served as an ambitious and motivated apprentice to senior software developers.
+
+» Worked at an independent level while, also serving as an enthusiastic and effective collaborator.
+
+» Worked with the backend team and frontend team in developing both backend and frontend for projects with Vue CLI, Node, MongoDb and express (MEVN).
+
+» Planned website development, converting mockups into usable web presence with Html,JavaScript,AJAX and JSON Coding.
+
+» Employed coding practices based on commonly accepted standards to establish site layout and user interface
             </p>
           </div>
         </div>
