--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4" style="color: white"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8" style="color:gray">English || Spanish</div>
+              <div class="col-sm-8" style="color:gray">English <p> Full working proficiency (C2, 4/4+) Highly proficient in speaking and writing (B2-C1,2/2+/3/3+)</p></div>
+              <div class="col-sm-8" style="color:gray">Yoruba <p> Native / full working proficiency (C2, 4/4+) </p></div>
+              <div class="col-sm-8" style="color:gray">Spanish <p> Elementary proficiency (A2, 1) </p> </div>
             </div>
              </div>
-          <div class="h6 title" style="color: grey">
-               Software Developer
-              </div>
-              <p style="color:gray"> I'm a Professional Software Developer..</p>
+          
+          
 
         </div>
       </div>
