new changes added

--- a/index.html
+++ b/index.html
@@ -534,20 +534,89 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5" style="color:white">Full Stack Web Developer
-                Intern
+            <div class="h5" style="color:white">Other projects available on my Github Repo : 
              </div>
             
             <p class="" style="color:grey">
-              » Planned website development, converting mockups into usable web presence with Html,JavaScript,JAX and JSON Coding.
+              » - Web software bank application.
 
               </p>
             <p class="" style="color:grey">
-»Built some great projects like Banking Applications, PWA Chat Applications, Management System for Schools and Churches using Web technologies like Php, AJAX, MySQL
+» - Php Web chat application (Vchat)
+
 
               </p>
              <p class="" style="color:grey">
-         » Employed coding practices based on commonly accepted standards to establish site layout and user interface
+         » - Data visualization using python
+
+
+
+              </p>
+              <p class="" style="color:grey">
+         » - Data aggregation using python
+
+
+              </p>
+              <p class="" style="color:grey">
+         » - Web E-commerce software application.
+
+
+              </p>
+              <p class="" style="color:grey">
+         » - C+ Solutions
+
+
+              </p>
+              <p class="" style="color:grey">
+         » - JavaScript calculator
+
+
+              </p>
+              <p class="" style="color:grey">
+         » - Recharge voucher generator.
+
+
+
+              </p>
+             <p class="" style="color:grey">
+         » - Audio player using JavaScript.
+
+
+
+              </p>
+             <p class="" style="color:grey">
+         » - Blog using Node, express, ejs, mongodb.
+
+
+
+
+              </p>
+             <p class="" style="color:grey">
+         » - Web based chat app using Web socket, Node,
+Express, Mongo db.
+
+
+
+              </p>
+             <p class="" style="color:grey">
+         » - A school online store project.
+
+
+
+
+              </p>
+             <p class="" style="color:grey">
+         » - Bar code generator using Php
+
+
+
+
+              </p>
+             <p class="" style="color:grey">
+         » - Others
+
+
+
 
               </p>
             
