--- a/index.html
+++ b/index.html
@@ -526,15 +526,12 @@
       <div class="row">
         <div class="col-md-3 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>Sept 2017 - Jan 2019
-              Oyo,Nigeria</p>
-            <div class="h5">Soft Quest Incorporated (SQI)
-            </div>
+           
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5" style="color:white">Other projects available on my Github Repo : 
+            <div class="h5" style="color:white">Other projects available here on my Github : 
              </div>
             
             <p class="" style="color:grey">
