--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                      <div class="h4 mb-0 title" style="color:white">Victor Aremu David (VAD)</div> 
 
                               <div class="h6  mt-3 title" style="color:grey"> Software Developer from Nigeria.</div>
-                              <p style="color:gray">I'm a professional task solving Software Engineer from Nigeria. I deliver quality and amazing solutions, with high and proficient skills required.</p>
+                              <p style="color:gray">I'm a professional task solving Software Developer from Nigeria. I deliver quality and amazing solutions, with high and proficient skills required.</p>
 
 
 <p style="color:gray">I'm  well versed in team collaboration to formulate and conceptualize corporate web presence. Specialty embracing challenging projects requiring detailed coding changes, search engine-related considerations and security. Integrates knowledge of visual arts to develop functional, appealing, custom-made web products and services.</p>
@@ -528,6 +528,7 @@
           <div class="card-body cc-experience-header">
             <div class="h5"> Github
             </div>
+<p> Some Selected Projects </p>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -779,7 +780,14 @@ Express, Mongo db.
           <div class="card-body">
             <div class="h5" style="color:white"> Degree In Engineering (Computer)</div>
             <p class="category">Federal University,Oye-Ekiti,Nigeria</p>
-            <p class="" style="color:grey"> Currently a Computer Engineering Student at FUOYE-Ekiti, Nigeria.</p>
+            <p class="" style="color:grey"> 
+Data Structures and Algorithms, Introduction to electronics,Circuit
+analysis,Signal processing,Engineering computing,
+Embedded systems,Computer networks,
+Autonomous robotics,Programming principles,
+Computer architecture.
+
+</p>
           </div>
         </div>
       </div>
@@ -796,7 +804,12 @@ Express, Mongo db.
           <div class="card-body">
             <div class="h5" style="color:white"> Degree In Software Engineering (Software Engineer)</div>
             <p class="category">Soft Quest Incoporated (SQI) college of ICT, Oyo State, Nigeria.</p>
-            <p class="" style="color:grey"> Currently a Software Engineering Student at SQI ICT, Nigeria.</p>
+            <p class="" style="color:grey">
+ Frontend Development, Backend Development, Web application
+Development, Mobile Development, Database Development, Devops
+Engineering.
+
+</p>
           </div>
         </div>
       </div>
@@ -813,8 +826,9 @@ Express, Mongo db.
           <div class="card-body">
             <div class="h5" style="color:white">Certified Full Stack Developer  (Master Dev)</div>
             <p class="category">Soft Quest Incoporated (SQI) college of ICT,Oyo State,Nigeria.</p>
-            <p class="" style="color:grey">I started my journey in the world of tech at SQI College of ICT. </p>
-              <p class="text-whit" style="color:grey">At SQI, I had my certificate degree in ICT (Full stack Developer).</p>
+            <p class="" style="color:grey"> Induction to ICT, Introduction to Programming basics, Introduction to
+Software architecture.
+</p>
           </div>
         </div>
       </div>
