--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@ Express, Mongo db.
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5" style="color:white"> Degree In Engineering (Computer)</div>
+            <div class="h5" style="color:white"> Bachelor of Engineering in Computer Engineering</div>
             <p class="category">Federal University,Oye-Ekiti,Nigeria</p>
             <p class="" style="color:grey"> 
 Data Structures and Algorithms, Introduction to electronics,Circuit
