--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ Software architecture.
   </div>
 </div> -->
 <div class="section" id="contact" style="background:#000000">
-  <div class="cc-contact-information" style="background-image: url('images/qw.jpg');">
+  <div class="cc-contact-information" style="background-image: url('images/k.jpg');">
     <div class="container" >
       <div class="cc-contact" >
         <div class="row">
@@ -971,7 +971,7 @@ Software architecture.
     </div>
     <footer class="footer" style="background-color: #181818;color:white">
       <div class="container text-center">
-        <span>VAD &copy;  2021</span>
+        <span>VAD &copy;  2022 </span>
         
        
    </div>
