--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@ Software architecture.
   </div>
 </div> -->
 <div class="section" id="contact" style="background:#000000">
-  <div class="cc-contact-information" style="background-image: url('images/k.jpg');">
+  <div class="cc-contact-information" style="background-image: url('images/z.jpg');">
     <div class="container" >
       <div class="cc-contact" >
         <div class="row">
