--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
 <p style="color:gray">I'm  well versed in team collaboration to formulate and conceptualize corporate web presence. Specialty embracing challenging projects requiring detailed coding changes, search engine-related considerations and security. Integrates knowledge of visual arts to develop functional, appealing, custom-made web products and services.</p>
-                              <p style="color:gray">Building & Designing Software Applications with great user experience is also His expertise. </p>
+                              <p style="color:gray">Building & Designing Software Applications with great user experience is also my expertise. </p>
                              
           </div>
         </div>
@@ -814,7 +814,7 @@ interface.
             <div class="h5" style="color:white"> Bachelor of Engineering in Computer Engineering</div>
             <p class="category">Federal University,Oye-Ekiti,Nigeria</p>
             <p class="" style="color:grey"> 
-Relevant Coursework : 
+<b style='color:white'>Relevant Coursework : </b>
 Data Structures and Algorithms, Introduction to electronics,Circuit
 analysis,Signal processing,Engineering computing,
 Embedded systems,Computer networks,
@@ -839,7 +839,7 @@ Computer architecture.
             <div class="h5" style="color:white"> Degree In Software Engineering (Software Engineer)</div>
             <p class="category">Soft Quest Incoporated (SQI) college of ICT, Oyo State, Nigeria.</p>
             <p class="" style="color:grey">
-Relevant Coursework : 
+<b style='color:white'>Relevant Coursework : </b>
  Frontend Development, Backend Development, Web application
 Development, Mobile Development, Database Development, Devops
 Engineering.
@@ -861,7 +861,7 @@ Engineering.
           <div class="card-body">
             <div class="h5" style="color:white">Certified Full Stack Developer  (Master Dev)</div>
             <p class="category">Soft Quest Incoporated (SQI) college of ICT,Oyo State,Nigeria.</p>
-            <p class="" style="color:grey"> Relevant Coursework : Induction to ICT, Introduction to Programming basics, Introduction to
+            <p class="" style="color:grey"> <b style='color:white'>Relevant Coursework : </b> Induction to ICT, Introduction to Programming basics, Introduction to
 Software architecture.
 </p>
           </div>
